--- a/QLD/Views/ServiceOtherPrice/Trash.cshtml
+++ b/QLD/Views/ServiceOtherPrice/Trash.cshtml
@@ -1,28 +1,28 @@
 ﻿@using QLD.Library
-@model PagedList.IPagedList<QLD.Models.Folk>
+@model PagedList.IPagedList<QLD.Models.ServiceOtherPrice>
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Danh sách Dân Tộc";
+    ViewBag.Title = "Danh sách giá dịch vụ";
     Layout = "~/Views/Shared/_BackEnd.cshtml";
-    var checkU = DefineFuntion.CheckRole("FolkU,Folk,QL");
-    var checkD = DefineFuntion.CheckRole("FolkD,Folk,QL");
-    var checkC = DefineFuntion.CheckRole("FolkC,Folk,QL");
+    var checkU = DefineFuntion.CheckRole("ServiceOtherU,ServiceOther,QL");
+    var checkD = DefineFuntion.CheckRole("ServiceOtherD,ServiceOther,QL");
+    var checkC = DefineFuntion.CheckRole("ServiceOtherC,ServiceOther,QL");
 }
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
 <section class="content-header">
     <h1>
         <a href="/"><i class="fa fa-home"></i> Trang chủ</a>
-        <small>/ Danh sách </small>
+        <small>/ Danh sách rác</small>
     </h1>
     <ol class="breadcrumb">
         @if (checkC)
         {
             <li><a href="Create" class="btn  btn-success btn-sm"><i class="fa fa-plus"></i> Thêm mới</a></li>
         }
-        <li><a href="Trash" class="btn btn-default btn-sm"><i class="fa fa-Index"></i>  Danh sách rác</a></li>
+        <li><a href="Index" class="btn btn-default btn-sm"><i class="fa fa-list"></i> Danh sách giá dịch vụ</a></li>
     </ol>
 </section>
-
 @using (Html.BeginForm())
 {
     <section class="content">
@@ -30,10 +30,10 @@
             <div class="col-md-12">
                 <div class="box">
                     <div class="box-header">
-                        <h2 class="box-title"><i class="fa fa-list"></i> <b>Danh sách dân tộc</b></h2>
+                        <h2 class="box-title"><i class="fa fa-list"></i> <b>Danh sách rác</b></h2>
                         <div class="box-tools">
                             <div class="input-group w250 pull-left">
-                                <input type="text" name="searchString" placeholder="Search" value='@ViewBag.SearchString' class="form-control input-sm pull-right">
+                                <input type="text" placeholder="Search" class="form-control input-sm pull-right" name="searchString">
                                 <div class="input-group-btn">
                                     <div class="btn-group w70">
                                         <!-- /.Show Tìm nâng cao -->
@@ -42,17 +42,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" w70 pull-right">
-                                <select class="select2" onchange="this.form.submit();" name="numberRow">
+                            <div class=" input-group w70 pull-right">
+                                <select class="form-control select2" onchange=" this.form.submit(); " name="nunberRow">
                                     @foreach (int i in ViewBag.ArrRow)
                                     {
-                                        if (ViewBag.NumberRow == i)
+                                        if (ViewBag.NunberRow == i)
                                         {
                                             <option value="@i" selected="selected">@i</option>}
                                         else
                                         {
                                             <option value="@i">@i</option>}
                                     }
+
                                 </select>
                             </div>
                         </div>
@@ -60,25 +61,20 @@
                     <!-- /.Tìm nâng cao -->
                     <div class="box-body no-padding" style="display: none;">
                     </div><!-- /.box-body -->
-                    @{Html.RenderAction("Notice", "Admin", new { mess = ViewBag.Mess, rowError = ViewBag.rowError, rowFinish = ViewBag.rowFinish });}
                     <div class="mailbox-controls box-custom">
                         <button name="typeName" type="submit" class="btn btn-default btn-sm" value="refresh" data-toggle="tooltip" data-original-title="Tải lại trang"><i class="fa fa-refresh"></i></button>
                         @if (checkU)
                         {
-                            <button name="typeName" type="submit" class="btn btn-default btn-sm" value="activity" data-toggle="tooltip" data-original-title="Cho phép dùng"><i class="text-green fa fa-check-circle"></i></button>
-                            <button name="typeName" type="submit" class="btn btn-default btn-sm" value="inactive" data-toggle="tooltip" data-original-title="Không cho dùng"><i class="text-red fa fa-minus-circle"></i></button>
-                            <button name="typeName" type="submit" class="btn btn-info btn-sm" value="edit" data-toggle="tooltip" data-original-title="Cập nhật"><i class="fa fa-edit"></i></button>
-                            <button name="typeName" type="submit" class="btn btn-warning btn-sm" value="trash" data-toggle="tooltip" data-original-title="Thùng rác"><i class="fa fa-trash-o"></i></button>
+                            <button name="typeName" type="submit" class="btn btn-success btn-sm" value="activity" data-toggle="tooltip" data-original-title="Phục hồi"><i class="fa fa-reply"></i></button>
                         }
                         @if (checkD)
                         {
-                            //===================================Delete================================
+                            //============================================================delete==========================================
                             <button name="typeName" type="submit" class="btn btn-danger btn-sm" value="delete" onclick="return Confirmdelete()" data-toggle="tooltip" data-original-title="Xóa"><i class="fa  fa-close"></i></button>
-                        }
-                        <div class="pull-right paging-custome">
+                        }  <div class="pull-right paging-custome">
                             <div class="pull-left lb-paging-custome ">Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount</div>
                             <div class="pull-left ">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow }))
+                                @Html.PagedListPager(Model, page => Url.Action("Trash", new { page, sortOrder = ViewBag.CurrentSort, searchString = ViewBag.SearchString, nunberRow = ViewBag.NunberRow }))
                             </div>
                         </div>
                     </div>
@@ -88,17 +84,20 @@
                             <tr>
                                 <!-- Check all button -->
                                 <th class="w60 center"><a class="btn btn-default btn-sm checkbox-toggle" data-toggle="tooltip" data-original-title="Chọn tất cả"><i class="fa fa-square-o"></i></a></th>
-                                <th class="w100 center">@Html.ActionLink("Trạng thái", "Index", new { sortOrder = ViewBag.Status, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Mã Dân Tộc", "Index", new { sortOrder = ViewBag.Code, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Tên Dân Tộc", "Index", new { sortOrder = ViewBag.Name, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Ghi chú", "Index", new { sortOrder = ViewBag.Note, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-
+                                <th class="w100 center">@Html.ActionLink("Trạng thái", "Trash", new { sortOrder = ViewBag.Status, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Tên", "Index", new { sortOrder = ViewBag.Name, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Từ ngày", "Index", new { sortOrder = ViewBag.FromDay, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Đến ngày", "Index", new { sortOrder = ViewBag.ToDay, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Giá", "Index", new { sortOrder = ViewBag.Price, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Giá người lớn", "Index", new { sortOrder = ViewBag.PriceAdult, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Giá trẻ em", "Index", new { sortOrder = ViewBag.PriceChild, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Giá trẻ sơ sinh", "Index", new { sortOrder = ViewBag.PriceInfant, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Giá trẻ nhỏ", "Index", new { sortOrder = ViewBag.PriceBaby, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
                             </tr>
                             @foreach (var item in Model)
                             {
-                                var i = 0;
                                 <tr>
-                                    <td class="w60 center"><label><input name="inputCheck" this.value="" value="@DefineFuntion.Encrypt(item.FolkId)" type="checkbox" class="minimal" /></label></td>
+                                    <td class="w60 center"><label><input name="inputCheck" value="@DefineFuntion.Encrypt(item.ServiceOtherId)" type="checkbox" class="minimal" /></label></td>
                                     <td class="w100 center">
                                         @if (item.Status == 1)
                                         { <span class="badge bg-green" data-toggle="tooltip" data-original-title="Cho phép dùng"><i class="fa fa-check-circle"></i></span> }
@@ -106,11 +105,10 @@
                                         {<span class="badge bg-red" data-toggle="tooltip" data-original-title="Không cho dùng"> <i class="fa  fa-minus-circle"></i></span> }
 
                                     </td>
-                                    <td>@Html.DisplayFor(modelItem => item.Code)</td>
                                     @if (checkU)
                                     {
                                         <td>
-                                            @Html.EncodedActionLink(item.Name, "Edit", "Admin/Folk", new { id = item.FolkId }, null)
+                                            @Html.EncodedActionLink(item.Name, "Edit", "Admin/ServiceOther", new { id = item.ServiceOtherId }, null)
 
                                         </td>
                                     }
@@ -118,18 +116,22 @@
                                     {
                                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
                                     }
-                                    <td>@Html.DisplayFor(modelItem => item.Note)</td>
-
+                                    <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.AddressShow)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Contents)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CreateBy)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CreateDay)</td>
                                 </tr>
-                                i++;
                             }
                         </table>
                     </div>
+
                     <div class="mailbox-controls box-custom">
                         <div class="pull-right paging-custome">
                             <div class="pull-left lb-paging-custome ">Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount</div>
                             <div class="pull-left ">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow }))
+                                @Html.PagedListPager(Model, page => Url.Action("Trash", new { page, sortOrder = ViewBag.CurrentSort, searchString = ViewBag.SearchString, nunberRow = ViewBag.NunberRow }))
                             </div>
                         </div>
                     </div>
@@ -143,7 +145,7 @@
 <script>
     function Confirmdelete() {
         if (checkinput() >= 1) {
-            return confirm('Bạn có chắc chắn muốn xóa?');
+            return confirm('Bạn có chắc chắn muốn xóa vĩnh viễn mục đã chọn?');
         }
         else {
             alert("Vui lòng chọn 1 dòng để xóa!");
@@ -157,7 +159,7 @@
             if (eleNodelist[i].type == 'checkbox')
                 if (eleNodelist[i].checked == true)
                 {
-                    dem++;
+                   dem++;
                 }
         }
         return dem;
