--- a/QLD/Views/ServiceOther/Trash.cshtml
+++ b/QLD/Views/ServiceOther/Trash.cshtml
@@ -86,12 +86,12 @@
                                 <th class="w60 center"><a class="btn btn-default btn-sm checkbox-toggle" data-toggle="tooltip" data-original-title="Chọn tất cả"><i class="fa fa-square-o"></i></a></th>
                                 <th class="w100 center">@Html.ActionLink("Trạng thái", "Trash", new { sortOrder = ViewBag.Status, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
                                 <th>@Html.ActionLink("Tên Dịch Vụ", "Index", new { sortOrder = ViewBag.Name, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Địa Chỉ", "Index", new { sortOrder = ViewBag.Adress, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Địa Chỉ Hiện", "Index", new { sortOrder = ViewBag.AdressShow, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Địa Chỉ", "Index", new { sortOrder = ViewBag.Address, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Địa Chỉ Hiện", "Index", new { sortOrder = ViewBag.AddressShow, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
                                 <th>@Html.ActionLink("Mô Tả", "Index", new { sortOrder = ViewBag.Description, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Nội Dung", "Index", new { sortOrder = ViewBag.Adress, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Người Tạo", "Index", new { sortOrder = ViewBag.CreateBy, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
-                                <th>@Html.ActionLink("Ngày Tạo", "Index", new { sortOrder = ViewBag.CreateDay, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Nội Dung", "Index", new { sortOrder = ViewBag.Contents, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Người Cập Nhật", "Index", new { sortOrder = ViewBag.UpdateBy, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
+                                <th>@Html.ActionLink("Ngày Cập Nhật", "Index", new { sortOrder = ViewBag.UpdateDay, searchString = ViewBag.SearchString, numberRow = ViewBag.NumberRow })</th>
                             </tr>
                             @foreach (var item in Model)
                             {
@@ -119,8 +119,8 @@
                                     <td>@Html.DisplayFor(modelItem => item.AddressShow)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Description)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Contents)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CreateBy)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CreateDay)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.UpdateBy)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.UpdateDay)</td>
                                 </tr>
                             }
                         </table>
